--- a/book.toml
+++ b/book.toml
@@ -1,15 +1,19 @@
 [book]
-authors = ["Federico Borello"]
 language = "en"
 src = "src"
-title = "notas_test"
+title = "MdBook Template"
 
 [preprocessor]
 
 [preprocessor.mermaid]
 command = "mdbook-mermaid"
 
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.3" # do not edit: managed by `mdbook-admonish install`
+
 [output]
 
 [output.html]
 additional-js = ["mermaid.min.js", "mermaid-init.js"]
+additional-css = ["./mdbook-admonish.css"]
